[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = [ "dialog-all"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.13.0"
tempfile = "3.2.0"
uuid = { version = "0.8", features = ["v4"] }
image = "0.23.14" # 画像処理ライブラリ
ravif = "0.9.0" # avifエンコーダ
webp = "0.2.6" # WebPエンコーダ
dirs = "3.0" # ディレクトリ操作
lazy_static = "1.4.0" # グローバル変数

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
